--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "live-server": "^1.1.0",
     "tailwindcss": "^3.3.1",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@types/p5": "^1.6.0"
   }
 }
